@@ -6505,6 +6505,18 @@ sub job_finishing_sequence($$$$$$){
         ####################
     }
 
+    # Execute PING_CHECKER if asked
+    if ((is_conf("ACTIVATE_PINGCHECKER_AT_END_JOB")) and (lc(get_conf("ACTIVATE_PINGCHECKER_AT_END_JOB")) eq "yes")){
+        my @hosts = iolib::get_job_current_hostnames($dbh,$job_id);
+        oar_debug("[job_finishing_sequence] [$job_id] Run pingchecker to test nodes at the end of the job on nodes: @hosts\n");
+        my @bad_pingchecker = ping_checker::test_hosts(@hosts);
+        if ($#bad_pingchecker >= 0){
+            oar_error("[job_finishing_sequence] [$job_id] PING_CHECKER_NODE_SUSPECTED OAR suspects nodes for the job $job_id : @bad_pingchecker\n");
+            push(@{$events}, {type => "PING_CHECKER_NODE_SUSPECTED", string => "[job_finishing_sequence] OAR suspects nodes for the job $job_id : @bad_pingchecker", hosts => \@bad_pingchecker});
+        }
+    }
+    #
+
     foreach my $e (@{$events}){
         oar_Judas::oar_debug("$e->{string}\n");
         if (defined($e->{hosts})){
