@@ -121,6 +121,10 @@ FINAUD_FREQUENCY="300"
 # Set to yes if you want to check the nodes that runs jobs. (no is the default value)
 #CHECK_NODES_WITH_RUNNING_JOB='no'
 
+# Set to yes if you want to check the aliveness of nodes just after the end of
+# each jobs.
+#ACTIVATE_PINGCHECKER_AT_END_JOB="no"
+
 # Uncomment only one of the following PINGCHECKER configuration
 
 # sentinelle.pl
